Formatting and EXTENSIONS.txt

--- a/AllMyBooksArePacked/data/book11.html
+++ b/AllMyBooksArePacked/data/book11.html
@@ -6269,7 +6269,7 @@ Looking for something good to read? Browse our editors' picks for the <a href="/
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -8542,7 +8542,7 @@ text-decoration:none !important;
 <hr noshade="noshade" size="1" class="bucketDivider" />
 <div class="bucket">
 <h2>
-Sell a Digital Version of This Book in the Kindle Store
+Sell a Digital Version of This Sorting.Book in the Kindle Store
 </h2>
 <div class="content">
 If you are a publisher or author and hold the digital rights to a book, you can sell a digital version of it in our Kindle Store.
@@ -9269,7 +9269,7 @@ If you are a publisher or author and hold the digital rights to a book, you can 
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
