--- a/AllMyBooksArePacked/data/book13.html
+++ b/AllMyBooksArePacked/data/book13.html
@@ -3338,7 +3338,7 @@ function amz_js_PopWin(url,name,options){
 <meta name="description" content="Man of Steel: Inside the Legendary World of Superman [Daniel Wallace, Zack Snyder] on Amazon.com. *FREE* super saver shipping on qualifying offers. &lt;DIV&gt;In &lt;I&gt;Man of Steel&lt;/I&gt;, director Zack Snyder (&lt;I&gt;300, Watchmen&lt;/I&gt;) and producer Christopher Nolan (&lt;I&gt;The Dark Knight Trilogy&lt;/I&gt;) have delivered a stunning new vision of Superman that is both fresh and familiar. &lt;I&gt;Man of Steel: Inside the Legendary World of Superman&lt;/I&gt; explores the remarkable creative process behind the movie and showcases the exceptional concept art that shaped its unique visual style. From the stark alien vistas of Krypton to the down-to-earth warmth of Smallville" />
 <meta name="title" content="Man of Steel: Inside the Legendary World of Superman: Daniel Wallace, Zack Snyder: 9781608871810: Amazon.com: Books" />
 
-<meta name="keywords" content="Daniel Wallace, Zack Snyder,Man of Steel: Inside the Legendary World of Superman,Insight Editions,1608871819,Cinema/Film: Book,Man of steel (Motion picture),Pop Arts / Pop Culture,Performing Arts,Performing Arts / Film &amp; Video / Direction &amp; Production,Film &amp; Video - Direction &amp; Production,PER004010" />
+<meta name="keywords" content="Daniel Wallace, Zack Snyder,Man of Steel: Inside the Legendary World of Superman,Insight Editions,1608871819,Cinema/Film: Sorting.Book,Man of steel (Motion picture),Pop Arts / Pop Culture,Performing Arts,Performing Arts / Film &amp; Video / Direction &amp; Production,Film &amp; Video - Direction &amp; Production,PER004010" />
 <title>Man of Steel: Inside the Legendary World of Superman: Daniel Wallace, Zack Snyder: 9781608871810: Amazon.com: Books</title>
 
 
@@ -6600,7 +6600,7 @@ Looking for something good to read? Browse our editors' picks for the <a href="/
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -9887,7 +9887,7 @@ if (cv_mo2OBEDWOPW9LKWpreplay) {
 <a href="http://www.amazon.com/Man-Steel-Inside-Legendary-Superman/product-reviews/1608871819" class="reviewTitle inlineblock mt17" title="Read the full review by Darren" >  <div id="rev-dpReviewsMostRecent-R28IEY7YNLMY7G" class="block">    <div class="ttl"><span class="swSprite s_star_3_0 " title="3.0 out of 5 stars" ><span>3.0 out of 5 stars</span></span>
 
 
-<span class="txtlarge gl3 valignMiddle"><strong>Great Movie Book, but falls short...</strong></span></div>    <div class="reviewText">
+<span class="txtlarge gl3 valignMiddle"><strong>Great Movie Sorting.Book, but falls short...</strong></span></div>    <div class="reviewText">
 
 
 
@@ -11991,7 +11991,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <hr noshade="noshade" size="1" class="bucketDivider" />
 <div class="bucket">
 <h2>
-Sell a Digital Version of This Book in the Kindle Store
+Sell a Digital Version of This Sorting.Book in the Kindle Store
 </h2>
 <div class="content">
 If you are a publisher or author and hold the digital rights to a book, you can sell a digital version of it in our Kindle Store.
@@ -12719,7 +12719,7 @@ If you are a publisher or author and hold the digital rights to a book, you can 
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
