--- a/AllMyBooksArePacked/data/book19.html
+++ b/AllMyBooksArePacked/data/book19.html
@@ -7314,7 +7314,7 @@ Download the <a href="/gp/redirect.html?location=http://g-ecx.images-amazon.com/
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -8552,7 +8552,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 
            <h3 class="productDescriptionSource" >Amazon.com Review</h3>
        <div class="productDescriptionWrapper" >
-       <strong>An Amazon Best Book of the Month, July 2013:</strong> The setup: A beautiful woman is snatched from her vacation on Corsica. A ransom note reaches 10 Downing Street. An ambitious, unfaithful prime minister seriously needs a fixer. Which leads his fixers to art restorer and Israeli spy, Gabriel Allon, one of the more believable and likable heroes in recent spy fiction. To call <em>The English Girl</em> a page turner is an oversimplification. Smart, unpredictable, and packed with bits of history, art, heart, and imagination, this is a page turner to be savored.  Let me just say that I like John LeCarre. Big fan. Still impressively relevant and prolific into his 80s. But the torch must pass to someone. And it&rsquo;s been a while since I grabbed anyone by the lapels and said, &ldquo;Read this now,&rdquo; so let me strongly suggest that you take <em>The English Girl</em> to the beach, or wherever summer may take you. Daniel Silva isn&rsquo;t quite LeCarre. He&rsquo;s a more modern breed, with some major DNA overlap. (Other DNA-sharing: Graham Greene, Joseph Kanon, Alan Furst.) When it comes to the vast club of practitioners of international spycraft, Silva is a cut above them all, and <em>The English Girl</em> is a masterwork.  --<a href="http://www.amazon.com/gp/feature.html?docId=1001046421" target="_blank"><em>Neal Thompson</em></a>
+       <strong>An Amazon Best Sorting.Book of the Month, July 2013:</strong> The setup: A beautiful woman is snatched from her vacation on Corsica. A ransom note reaches 10 Downing Street. An ambitious, unfaithful prime minister seriously needs a fixer. Which leads his fixers to art restorer and Israeli spy, Gabriel Allon, one of the more believable and likable heroes in recent spy fiction. To call <em>The English Girl</em> a page turner is an oversimplification. Smart, unpredictable, and packed with bits of history, art, heart, and imagination, this is a page turner to be savored.  Let me just say that I like John LeCarre. Big fan. Still impressively relevant and prolific into his 80s. But the torch must pass to someone. And it&rsquo;s been a while since I grabbed anyone by the lapels and said, &ldquo;Read this now,&rdquo; so let me strongly suggest that you take <em>The English Girl</em> to the beach, or wherever summer may take you. Daniel Silva isn&rsquo;t quite LeCarre. He&rsquo;s a more modern breed, with some major DNA overlap. (Other DNA-sharing: Graham Greene, Joseph Kanon, Alan Furst.) When it comes to the vast club of practitioners of international spycraft, Silva is a cut above them all, and <em>The English Girl</em> is a masterwork.  --<a href="http://www.amazon.com/gp/feature.html?docId=1001046421" target="_blank"><em>Neal Thompson</em></a>
       
       <div class="emptyClear"> </div>
       </div> 
@@ -14009,7 +14009,7 @@ text-decoration:none !important;
           0px; padding-bottom: 0px' action='/gp/reader/0062073168'  onsubmit="if (typeof(SitbReader) != 'undefined') { SitbReader.LightboxActions.openReaderToSearchResults(jQuery('#sitb-pop-inputbox').val(), 'sib_dp_srch_pop'); return false; }">
   <input type="hidden" name="v" value="search-inside" />
   <table width="100%" cellspacing=0 ><tr>
-    <td class="tinypopup">Search Inside This Book:</td> 
+    <td class="tinypopup">Search Inside This Sorting.Book:</td>
     <td><input id="sitb-pop-inputbox" class="sitb-pop-inputbox" name="keywords" value="" /></td>
 	<td><input type="image" src="http://g-ecx.images-amazon.com/images/G/01/search-browse/dp-popover-go-button._V156409071_.png"  width="21" alt="Go!" value="Go!" name="go" height="21" border="0" /></td>
     </tr>
@@ -15683,7 +15683,7 @@ May 17, 2013
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
