--- a/AllMyBooksArePacked/data/book4.html
+++ b/AllMyBooksArePacked/data/book4.html
@@ -6975,7 +6975,7 @@ Browse the best books of summer including blockbusters, beach reads, and editors
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -8048,7 +8048,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 
            <h3 class="productDescriptionSource" >About the Author</h3>
        <div class="productDescriptionWrapper" >
-       Sylvia Day is the #1 <i>New York Times</i> and #1 international bestselling author of more than a dozen award-winning novels sold in thirty-nine countries. A reader favorite across several genres, there are millions of copies of her books in print worldwide. She has been nominated for the Goodreads Choice Award for Best Author and her work has been honored as Amazon's Best of the Year in Romance. She has won the <i>RT Book Reviews</i> Reviewers' Choice Award and been nominated for Romance Writers of America's prestigious RITA award twice.
+       Sylvia Day is the #1 <i>New York Times</i> and #1 international bestselling author of more than a dozen award-winning novels sold in thirty-nine countries. A reader favorite across several genres, there are millions of copies of her books in print worldwide. She has been nominated for the Goodreads Choice Award for Best Author and her work has been honored as Amazon's Best of the Year in Romance. She has won the <i>RT Sorting.Book Reviews</i> Reviewers' Choice Award and been nominated for Romance Writers of America's prestigious RITA award twice.
       
       <div class="emptyClear"> </div>
       </div> 
@@ -8935,7 +8935,7 @@ span.kar_beta {
       <div class="mainContent">
         
   
-      Sylvia Day is the #1 New York Times and #1 international bestselling author of more than a dozen award-winning novels sold in forty countries. A reader favorite across several genres, there are millions of copies of her books in print worldwide. She has been nominated for the Goodreads Choice Award for Best Author and her work has been honored as Amazon's Best of the Year in Romance. She has won the RT Book Reviews Reviewers' Choice Award and been nominated for Romance Writers of America's prestigious RITA award twice.<br/><br/>Sylvia also writes under the pseudonyms: <br/>S. J. Day - www.amazon.com/author/sjday<br/>Livia Dare - www.amazon.com/author/liviadare
+      Sylvia Day is the #1 New York Times and #1 international bestselling author of more than a dozen award-winning novels sold in forty countries. A reader favorite across several genres, there are millions of copies of her books in print worldwide. She has been nominated for the Goodreads Choice Award for Best Author and her work has been honored as Amazon's Best of the Year in Romance. She has won the RT Sorting.Book Reviews Reviewers' Choice Award and been nominated for Romance Writers of America's prestigious RITA award twice.<br/><br/>Sylvia also writes under the pseudonyms: <br/>S. J. Day - www.amazon.com/author/sjday<br/>Livia Dare - www.amazon.com/author/liviadare
 
 
       </div>
@@ -12239,7 +12239,7 @@ span.kar_beta {
 
 
 <div class="drkgry">
-  Loved this series and want more please! Ace is HOT and Eva just as much.  I want to read more about t them.  Book 3 can not be the end, please.
+  Loved this series and want more please! Ace is HOT and Eva just as much.  I want to read more about t them.  Sorting.Book 3 can not be the end, please.
 </div>
 
 
@@ -12256,7 +12256,7 @@ span.kar_beta {
 <a href="http://www.amazon.com/Sylvia-Day-Crossfire-Series-Boxed/product-reviews/0425266060" class="reviewTitle inlineblock mt17" title="Read the full review by E H" >  <div id="rev-dpReviewsMostRecent-R2BMXS67Q3BWIF" class="block">    <div class="ttl"><span class="swSprite s_star_5_0 " title="5.0 out of 5 stars" ><span>5.0 out of 5 stars</span></span>
 
 
-<span class="txtlarge gl3 valignMiddle"><strong>Good Book, can't wait for the next one</strong></span></div>    <div class="reviewText">
+<span class="txtlarge gl3 valignMiddle"><strong>Good Sorting.Book, can't wait for the next one</strong></span></div>    <div class="reviewText">
 
 
 
@@ -14793,7 +14793,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
