--- a/AllMyBooksArePacked/data/book7.html
+++ b/AllMyBooksArePacked/data/book7.html
@@ -6959,7 +6959,7 @@ var disableWinnerPopup;
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -12487,7 +12487,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
