--- a/AllMyBooksArePacked/data/book8.html
+++ b/AllMyBooksArePacked/data/book8.html
@@ -7320,7 +7320,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <a href="/Charlie-Ranch-Dog-Charlies-Snow/dp/0062219111"  class="sim-img-title" > <div class="product-image">
                        <img src="http://ecx.images-amazon.com/images/I/519AVz4b9wL._SL500_SS100_.jpg" width="100" alt="" height="100" border="0" />
                     </div>
-                    Charlie the Ranch Dog: Charlie&#39;s Snow Day (I Can Read Book 1) </a>
+                    Charlie the Ranch Dog: Charlie&#39;s Snow Day (I Can Read Sorting.Book 1) </a>
 
     <div class="byline">
         Ree Drummond
@@ -7567,7 +7567,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <a href="/Charlie-Ranch-Dog-Wheres-Bacon/dp/0062219081"  class="sim-img-title" > <div class="product-image">
                        <img src="http://ecx.images-amazon.com/images/I/51C607dykIL._SL500_PIsitb-sticker-arrow-big,TopRight,35,-73_OU01_SS100_.jpg" width="100" alt="" height="100" border="0" />
                     </div>
-                    <span title="Charlie the Ranch Dog: Where&#39;s the Bacon? (I Can Read Book 1)">Charlie the Ranch Dog: Where&#39;s the Bacon? (I &#133;</span> </a>
+                    <span title="Charlie the Ranch Dog: Where&#39;s the Bacon? (I Can Read Sorting.Book 1)">Charlie the Ranch Dog: Where&#39;s the Bacon? (I &#133;</span> </a>
 
     <div class="byline">
         Ree Drummond
@@ -11261,7 +11261,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
