--- a/AllMyBooksArePacked/data/book9.html
+++ b/AllMyBooksArePacked/data/book9.html
@@ -6796,7 +6796,7 @@ var disableWinnerPopup;
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -7561,10 +7561,10 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 
 
 
-<a href="/The-Mathematica-Book-Fifth-Edition/dp/1579550223"  class="sim-img-title" > <div class="product-image">
+<a href="/The-Mathematica-Sorting.Book-Fifth-Edition/dp/1579550223"  class="sim-img-title" > <div class="product-image">
                        <img src="http://ecx.images-amazon.com/images/I/51zafw8oGuL._SL500_PIsitb-sticker-arrow-big,TopRight,35,-73_OU01_SS100_.jpg" width="100" alt="" height="100" border="0" />
                     </div>
-                    The Mathematica Book, Fifth Edition </a>
+                    The Mathematica Sorting.Book, Fifth Edition </a>
 
     <div class="byline">
         <span class="carat">&#8250</span> 
@@ -11276,7 +11276,7 @@ text-decoration:none !important;
           0px; padding-bottom: 0px' action='/gp/reader/1579550088'  onsubmit="if (typeof(SitbReader) != 'undefined') { SitbReader.LightboxActions.openReaderToSearchResults(jQuery('#sitb-pop-inputbox').val(), 'sib_dp_srch_pop'); return false; }">
   <input type="hidden" name="v" value="search-inside" />
   <table width="100%" cellspacing=0 ><tr>
-    <td class="tinypopup">Search Inside This Book:</td> 
+    <td class="tinypopup">Search Inside This Sorting.Book:</td>
     <td><input id="sitb-pop-inputbox" class="sitb-pop-inputbox" name="keywords" value="" /></td>
 	<td><input type="image" src="http://g-ecx.images-amazon.com/images/G/01/search-browse/dp-popover-go-button._V156409071_.png"  width="21" alt="Go!" value="Go!" name="go" height="21" border="0" /></td>
     </tr>
@@ -11438,7 +11438,7 @@ amznJQ.available('popover', function(){
 <hr noshade="noshade" size="1" class="bucketDivider" />
 <div class="bucket">
 <h2>
-Sell a Digital Version of This Book in the Kindle Store
+Sell a Digital Version of This Sorting.Book in the Kindle Store
 </h2>
 <div class="content">
 If you are a publisher or author and hold the digital rights to a book, you can sell a digital version of it in our Kindle Store.
@@ -12308,7 +12308,7 @@ If you are a publisher or author and hold the digital rights to a book, you can 
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
