--- a/AllMyBooksArePacked/data/book1.html
+++ b/AllMyBooksArePacked/data/book1.html
@@ -6913,7 +6913,7 @@ Browse our <a href="/book-deals/b?ie=UTF8&node=6392463011">Bookshelf Favorites</
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -9450,7 +9450,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <a href="http://www.amazon.com/Zealot-Life-Times-Jesus-Nazareth/product-reviews/140006922X" class="reviewTitle inlineblock mt17" title="Read the full review by C. E. Selby" >  <div id="rev-dpReviewsMostRecent-R2TU8H40SJC50S" class="block">    <div class="ttl"><span class="swSprite s_star_5_0 " title="5.0 out of 5 stars" ><span>5.0 out of 5 stars</span></span>
 
 
-<span class="txtlarge gl3 valignMiddle"><strong>This Is a Great Book for a Lay Person</strong></span></div>    <div class="reviewText">
+<span class="txtlarge gl3 valignMiddle"><strong>This Is a Great Sorting.Book for a Lay Person</strong></span></div>    <div class="reviewText">
 
 
 
@@ -10959,7 +10959,7 @@ text-decoration:none !important;
           0px; padding-bottom: 0px' action='/gp/reader/140006922X'  onsubmit="if (typeof(SitbReader) != 'undefined') { SitbReader.LightboxActions.openReaderToSearchResults(jQuery('#sitb-pop-inputbox').val(), 'sib_dp_srch_pop'); return false; }">
   <input type="hidden" name="v" value="search-inside" />
   <table width="100%" cellspacing=0 ><tr>
-    <td class="tinypopup">Search Inside This Book:</td> 
+    <td class="tinypopup">Search Inside This Sorting.Book:</td>
     <td><input id="sitb-pop-inputbox" class="sitb-pop-inputbox" name="keywords" value="" /></td>
 	<td><input type="image" src="http://g-ecx.images-amazon.com/images/G/01/search-browse/dp-popover-go-button._V156409071_.png"  width="21" alt="Go!" value="Go!" name="go" height="21" border="0" /></td>
     </tr>
@@ -12005,7 +12005,7 @@ amznJQ.available('popover', function(){
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
