--- a/AllMyBooksArePacked/data/book12.html
+++ b/AllMyBooksArePacked/data/book12.html
@@ -6433,7 +6433,7 @@ Browse the best books of the summer including popular series, classics, and edit
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -11719,7 +11719,7 @@ text-decoration:none !important;
           0px; padding-bottom: 0px' action='/gp/reader/0385739761'  onsubmit="if (typeof(SitbReader) != 'undefined') { SitbReader.LightboxActions.openReaderToSearchResults(jQuery('#sitb-pop-inputbox').val(), 'sib_dp_srch_pop'); return false; }">
   <input type="hidden" name="v" value="search-inside" />
   <table width="100%" cellspacing=0 ><tr>
-    <td class="tinypopup">Search Inside This Book:</td> 
+    <td class="tinypopup">Search Inside This Sorting.Book:</td>
     <td><input id="sitb-pop-inputbox" class="sitb-pop-inputbox" name="keywords" value="" /></td>
 	<td><input type="image" src="http://g-ecx.images-amazon.com/images/G/01/search-browse/dp-popover-go-button._V156409071_.png"  width="21" alt="Go!" value="Go!" name="go" height="21" border="0" /></td>
     </tr>
@@ -11881,7 +11881,7 @@ amznJQ.available('popover', function(){
 <hr noshade="noshade" size="1" class="bucketDivider" />
 <div class="bucket">
 <h2>
-Sell a Digital Version of This Book in the Kindle Store
+Sell a Digital Version of This Sorting.Book in the Kindle Store
 </h2>
 <div class="content">
 If you are a publisher or author and hold the digital rights to a book, you can sell a digital version of it in our Kindle Store.
@@ -12364,7 +12364,7 @@ If you are a publisher or author and hold the digital rights to a book, you can 
       <td width="10">&nbsp;</td>
 
       <td>
-         <a href="/Very-Strange-Books/lm/R1LXSLA3J5Y95W">Very Strange Books</a>: A list by  <a  href="/gp/richpub/listmania/byauthor/A1DDZAE5NREK1O">Cypress Green "She Who Has a Book in Hand Everywhere She Goes"</a>
+         <a href="/Very-Strange-Books/lm/R1LXSLA3J5Y95W">Very Strange Books</a>: A list by  <a  href="/gp/richpub/listmania/byauthor/A1DDZAE5NREK1O">Cypress Green "She Who Has a Sorting.Book in Hand Everywhere She Goes"</a>
       </td>
     </tr>
   </table>
@@ -12722,7 +12722,7 @@ If you are a publisher or author and hold the digital rights to a book, you can 
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
