--- a/AllMyBooksArePacked/data/book17.html
+++ b/AllMyBooksArePacked/data/book17.html
@@ -6992,7 +6992,7 @@ Browse the best books of summer including blockbusters, beach reads, and editors
 
 <a name="postPS"><hr class="bucketDivider" size="1" noshade="noshade"/></a>
 <div id="ps-content" class="bucket">
-  <h2>Book Description</h2>
+  <h2>Sorting.Book Description</h2>
 
 
 
@@ -11283,7 +11283,7 @@ text-decoration:none !important;
           0px; padding-bottom: 0px' action='/gp/reader/147780630X'  onsubmit="if (typeof(SitbReader) != 'undefined') { SitbReader.LightboxActions.openReaderToSearchResults(jQuery('#sitb-pop-inputbox').val(), 'sib_dp_srch_pop'); return false; }">
   <input type="hidden" name="v" value="search-inside" />
   <table width="100%" cellspacing=0 ><tr>
-    <td class="tinypopup">Search Inside This Book:</td> 
+    <td class="tinypopup">Search Inside This Sorting.Book:</td>
     <td><input id="sitb-pop-inputbox" class="sitb-pop-inputbox" name="keywords" value="" /></td>
 	<td><input type="image" src="http://g-ecx.images-amazon.com/images/G/01/search-browse/dp-popover-go-button._V156409071_.png"  width="21" alt="Go!" value="Go!" name="go" height="21" border="0" /></td>
     </tr>
@@ -12494,7 +12494,7 @@ Page <span class="page-number"></span>  of  <span class="num-pages"></span>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.beautybar.com/" class="nav_a">BeautyBar.com<br/> <span class="navFooterDescText">Prestige Beauty<br/> Delivered</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
-<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
+<td class="navFooterDescItem"><a href="http://www.bookdepository.com/" class="nav_a">Sorting.Book Depository<br/> <span class="navFooterDescText">Books With Free<br/> Delivery Worldwide</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
 <td class="navFooterDescItem"><a href="http://www.bookworm.com" class="nav_a">Bookworm.com<br/> <span class="navFooterDescText">Books For Children<br/> Of All Ages</span></a></td>
 <td class="navFooterDescSpacer" style="width: 4%"></td>
